--- a/.env.dev
+++ b/.env.dev
@@ -2,9 +2,9 @@ AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
-DB_DATABASE='quizbd'
-DB_USER='root'
-DB_PASSWORD='toninhomailom'
+DB_DATABASE='quiz'
+DB_USER='ceo'
+DB_PASSWORD='Sptech#2024'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
